Added exit buttons from range products dashboard form

--- a/oscar/templates/dashboard/ranges/range_product_list.html
+++ b/oscar/templates/dashboard/ranges/range_product_list.html
@@ -114,6 +114,12 @@ Products in range '{{ range.name }}' | {{ block.super }}
 	{% else %}
 		<p>No products found.</p>
 	{% endif %}
+
+	<div class="well well-info">
+		<a href="{% url dashboard:range-update range.id %}" class="btn btn-large btn-primary">Edit range</a> or
+		<a href="{% url dashboard:range-list %}" class="">return to range list</a>
+	</div>
+			
 {% endblock dashboard_content %}
 
 {% block onbodyload %}
