--- a/oscar/templates/catalogue/partials/pagination.html
+++ b/oscar/templates/catalogue/partials/pagination.html
@@ -1,11 +1,13 @@
+{% load display_tags %}
+
 <div>
     <ul class="pager">
         {% if page_obj.has_previous %}
-        <li class="previous"><a href="?page={{ page_obj.previous_page_number }}">previous</a></li>
+        <li class="previous"><a href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}">previous</a></li>
         {% endif %}
         <li class="current">Page {{ page_obj.number }} of {{ paginator.num_pages }}</li>
         {% if page_obj.has_next %}
-        <li class="next"><a href="?page={{ page_obj.next_page_number }}">next</a></li>
+        <li class="next"><a href="?{% get_parameters page %}page={{ page_obj.next_page_number }}">next</a></li>
         {% endif %}
     </ul>
 </div>
