--- a/oscar/templates/partials/form_fields.html
+++ b/oscar/templates/partials/form_fields.html
@@ -5,7 +5,7 @@
     {% if field.is_hidden %}
         {{ field }}
     {% else %}
-        <label for="{{ field.auto_id }}" class="control-label {% if field.field.required %}required{% endif %}">{{ field.label }}</label>
+        <label for="{{ field.auto_id }}" class="control-label {% if field.field.required %}required{% endif %}">{{ field.label }}{% if field.field.required %} <span>*</span>{% endif %}</label>
         <div class="controls">
             {{ field }}
             {% for error in field.errors %}
