--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -51,7 +51,7 @@
 					{% endfor %}
 				</ul>
 			{% else %}
-					<p class="star">No Rating <a href="#reviews">Add review</a></p>
+			<p class="star">No Rating <a href="{% url catalogue:reviews-add product.slug product.id %}#addreview">Add review</a></p>
 			{% endif %}
             
             <p><strong>Product Code:</strong> <code>{{ product.upc }}</code></p>
