jobs 0057777, 0056911, 0060095, 0060100 + added a little more to FED documentation

--- a/oscar/static/oscar/less/page/product_lists.less
+++ b/oscar/static/oscar/less/page/product_lists.less
@@ -78,6 +78,9 @@
       #id_product_id {
         width:90%;
       }
+      label {
+        display:none;
+      }
     }
     .btn {
       padding-left:0px;
