--- a/oscar/templates/catalogue/partials/product.html
+++ b/oscar/templates/catalogue/partials/product.html
@@ -27,24 +27,23 @@
     
     <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title|truncatewords:7 }}</a></h3>
     
-    {% if product.is_group %}
-        <h4 class="group-price"><span>From</span> <strong>{{ product.min_variant_price_incl_tax|currency }}</strong></h4>
-        <div class="product_price">
-    {% else %}
-        <div class="product_price">
-            {% if product.has_stockrecord %} 
-                <h4><span>{{ product.stockrecord.price_incl_tax|currency }}</span></h4>
-                <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2 }}</p>
+    <div class="product_price">
+        {% if product.has_stockrecord %}    
+            {% if product.is_group %}
+                <h4><span>From</span> {{ product.min_variant_price_incl_tax|currency }}</h4>
             {% else %}
-                <p class="app-ico avaliability outofstock">Not available</p>
+                <h4>{{ product.stockrecord.price_incl_tax|currency }}</h4>
             {% endif %}
-    {% endif %}
+            <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2 }}</p>
+        {% else %}
+            <p class="app-ico avaliability outofstock">Not available</p>
+        {% endif %}
 
-    {% basket_form basket product as basket_form single %}
-    <form action="{% url basket:add %}" method="post">
-        {% csrf_token %}
-        {{ basket_form.as_p }}
-        <input type="submit" class="btn btn-primary" value="Add to basket" />
-    </form>
+        {% basket_form basket product as basket_form single %}
+        <form action="{% url basket:add %}" method="post">
+            {% csrf_token %}
+            {{ basket_form.as_p }}
+            <input type="submit" class="btn btn-primary" value="Add to basket" />
+        </form>
     </div>
 </article>
