--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -14,26 +14,58 @@ Checkout gateway | {{ block.super }}
 <div class="sub-header">
 	<h2>Who are you?</h2>
 </div>
-<form action="." method="post" class="genericform">
+
+<form action="." method="post" class="form-stacked well">
 	{% csrf_token %}
 	{{ form.non_field_errors }}
-	<div>
-		<label for="id_username">Your email address:</label>
-		{{ form.username }}
-		{{ form.username.errors }}
+	
+	<div class="control-group {% for error in form.username.errors %}error{% endfor %}">
+		<label for="id_username" class="control-label {% if form.username.field.required %}required{% endif %}">Your email address{% if form.username.field.required %} <span>*</span>{% endif %}</label>
+		<div class="controls">
+		    {{ form.username }}
+		    {% for error in form.username.errors %}
+				<span class="help-block">
+					{{ error|escape }}
+				</span>
+            {% endfor %}
+		</div>
 	</div>
-	<div>
+	
+	<div class="control-group">
 		{{ form.options.errors }}
-		<label><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
-			I have an account and my password is:</label>
-		{{ form.password }}
-		{{ form.password.errors }}
-		<a href="{% url password-reset %}">Get a password reminder</a>
-		<label><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> I don't want to create an account</label><br/>
+		<div class="controls">
+			<label class="radio">
+			     <input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
+			    I have an account and my password is:
+			</label>
+		</div>
 	</div>
-	<div>
+	
+	<div class="control-group {% for error in form.password.errors %}error{% endfor %}">
+		<div class="controls">
+		    {{ form.password }}
+		    {% for error in form.password.errors %}
+				<span class="help-block">
+					{{ error|escape }}
+				</span>
+            {% endfor %}
+		</div>
+	</div>	
+			
+    <p><a href="{% url password-reset %}">Get a password reminder</a></p>
+	
+	<div class="control-group">
+		<div class="controls">
+			<label class="radio">
+			     <input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} />
+			    I don't want to create an account:
+			</label>
+		</div>
+	</div>
+		
+	<div class="form-actions">
 		<button type="submit" class="btn btn-large btn-primary">Continue</button>
-		Alternatively <a href="{% url customer:register %}?next={% url checkout:index %}">create an account</a> before you checkout.
+		 Alternatively <a href="{% url customer:register %}?next={% url checkout:index %}">create an account</a> before you checkout.
 	</div>
 </form>
 
