--- a/oscar/templates/registration/password_reset_form.html
+++ b/oscar/templates/registration/password_reset_form.html
@@ -5,13 +5,31 @@
 
 {% block content %}
 
-	<h1>{% trans "Password reset" %}</h1>
+	<div class="sub-header">
+    	<h2>{% trans "Password reset" %}</h2>
+    </div>
 
-	<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
+	<form action="" method="post" class="form-stacked well">
+	{% csrf_token %}
+	
+	    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
+	    	
+    	<div class="control-group {% for error in form.email.errors %}error{% endfor %}">
+    		<label for="id_email" class="control-label {% if form.email.field.required %}required{% endif %}">{% trans 'E-mail address:' %}{% if form.email.field.required %} <span>*</span>{% endif %}</label>
+    		<div class="controls">
+    		    {{ form.email }}
+    		    {% for error in form.email.errors %}
+    				<span class="help-block">
+    					{{ error|escape }}
+    				</span>
+                {% endfor %}
+    		</div>
+    	</div>
+	
+        <div class="form-actions">
+             <input type="submit" class="btn btn-primary" value="{% trans 'Reset my password' %}" />
+        </div>
 
-	<form action="" method="post">{% csrf_token %}
-	{{ form.email.errors }}
-	<p><label for="id_email">{% trans 'E-mail address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
 	</form>
 
 {% endblock %}
