--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -136,8 +136,7 @@
         <div id="reviews" class="sub-header">
             <h2>Customer Reviews</h2>
         </div>
-        <p>Read customer reviews on this product. If you have read this book, why not post your own
-       review?</p>
+        <p>Read customer reviews on this product.</p>
        <div class="review_read">
            <a href="{% url catalogue:reviews-add product.slug product.id %}#addreview" class="btn btn-success">Add a review</a>
        </div>
