Add "select all" checkbox also in order items table

--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -471,4 +471,5 @@ Order {{ order.number }} | {{ block.super }}
 
 {% block onbodyload %}
 oscar.dashboard.orders.initTabs();
+oscar.dashboard.orders.initTable();
 {% endblock %}
