Paginate html report results

--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -35,5 +35,8 @@ Reports | {{ block.super }}
     {{ report }}
 {% endif %}
 
+{% block report %}
+{% endblock %}
+
 {% endblock dashboard_content %}
 
