--- a/oscar/templates/dashboard/reports/partials/order_report.html
+++ b/oscar/templates/dashboard/reports/partials/order_report.html
@@ -1,8 +1,9 @@
+{% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
 
+{% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th></th>
         <th>Order number</th>
         <th>User</th>
         <th>Total incl. tax</th>
@@ -11,7 +12,6 @@
     </tr>
     {% for order in objects %}
     <tr>
-        <td><input type="checkbox" name="selected_order" class="selected_order" value="{{ order.id }}"/>
         <td>{{ order.number }}</td>
         <td>{{ order.user }}</td>
         <td>{{ order.total_incl_tax|currency }}</td>
@@ -22,3 +22,7 @@
     </tr>
     {% endfor %}
 </table>
+    {% if page_obj %}
+        {% include "catalogue/partials/pagination.html" %}
+    {% endif %}
+{% endblock %}
