--- a/oscar/templates/dashboard/reports/partials/product_report.html
+++ b/oscar/templates/dashboard/reports/partials/product_report.html
@@ -1,5 +1,7 @@
+{% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
 
+{% block report %}
 <table class="table table-striped table-bordered">
     <tr>
         <th>Product</th>
@@ -16,3 +18,7 @@
     </tr>
     {% endfor %}
 </table>
+    {% if page_obj %}
+        {% include "catalogue/partials/pagination.html" %}
+    {% endif %}
+{% endblock %}
