--- a/oscar/templates/dashboard/reports/partials/submitted_basket_report.html
+++ b/oscar/templates/dashboard/reports/partials/submitted_basket_report.html
@@ -1,5 +1,7 @@
+{% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
 
+{% block report %}
 <table class="table table-striped table-bordered">
     <tr>
         <th>User ID</th>
@@ -24,3 +26,7 @@
     </tr>
     {% endfor %}
 </table>
+    {% if page_obj %}
+        {% include "catalogue/partials/pagination.html" %}
+    {% endif %}
+{% endblock %}
