--- a/oscar/templates/dashboard/reports/partials/open_basket_report.html
+++ b/oscar/templates/dashboard/reports/partials/open_basket_report.html
@@ -22,7 +22,7 @@
         <td>{{ basket.status }}</td>
         <td>{{ basket.num_lines }}</td>
         <td>{{ basket.num_items }}</td>
-        <td>{{ basket.total_incl_tax }}</td>
+        <td>{{ basket.total_incl_tax|currency }}</td>
         <td>{{ basket.date_created }}</td>
         <td>{{ basket.time_since_creation }}</td>
     </tr>
