Tidied up templates slightly

--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -31,6 +31,11 @@ Reports | {{ block.super }}
     </div>
 </form>
 
+{% if description %}
+<div class="sub-header">
+	<h3>{{ description }}</h3>
+</div>
+{% endif %}
 {% block report %}
 {% endblock %}
 
