--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -6,6 +6,7 @@
         <meta name="created" content='{% now "jS M Y h:i" %}' />
         <meta name="description" content="{% block description %}{% endblock %}" />
         <meta name="keywords" content="{% block keywords %}{% endblock %}" />
+		<meta name="viewport" content="width=device-width">
         
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
