Fixed issue with category pages with no image.
Added conditional around image inclusion in template

--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -49,7 +49,9 @@
     {% if category.description %}
         <div class="row-fluid">
             <div class="span9"><p>{{ category.description }}</p></div>
-            <div class="span3"><img src="{{ category.image.url }}" alt="{{ summary }}" /></div>
+			{% if category.image %}
+				<div class="span3"><img src="{{ category.image.url }}" alt="{{ summary }}" /></div>
+			{% endif %}
         </div>
     {% endif %}
 
