--- a/oscar/templates/dashboard/reports/partials/offer_report.html
+++ b/oscar/templates/dashboard/reports/partials/offer_report.html
@@ -2,19 +2,23 @@
 {% load currency_filters %}
 
 {% block report %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Offer</th>
-        <th>Total discount</th>
-    </tr>
-    {% for offer in objects %}
-    <tr>
-        <td>{{ offer }}</td>
-        <td>{{ offer.total_discount }}</td>
-    </tr>
-    {% endfor %}
-</table>
+{% if objects %}
+	<table class="table table-striped table-bordered">
+		<tr>
+			<th>Offer</th>
+			<th>Total discount</th>
+		</tr>
+		{% for offer_discount in objects %}
+		<tr>
+			<td>{{ offer_discount.offer.name }}</td>
+			<td>{{ offer_discount.total_discount|currency }}</td>
+		</tr>
+		{% endfor %}
+	</table>
     {% if page_obj %}
         {% include "catalogue/partials/pagination.html" %}
     {% endif %}
+{% else %}
+	<p>No results found.</p>
+{% endif %}
 {% endblock %}
