--- a/oscar/templates/dashboard/reports/partials/open_basket_report.html
+++ b/oscar/templates/dashboard/reports/partials/open_basket_report.html
@@ -4,10 +4,8 @@
 {% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th>User ID</th>
-        <th>Name</th>
         <th>Email</th>
-        <th>Basket status</th>
+        <th>Name</th>
         <th>Num lines</th>
         <th>Num items</th>
         <th>Value</th>
@@ -16,10 +14,8 @@
     </tr>
     {% for basket in objects %}
     <tr>
-        <td>{{ basket.owner_id }}</td>
-        <td>{{ basket.owner.get_full_name }}</td>
         <td>{{ basket.owner.email }}</td>
-        <td>{{ basket.status }}</td>
+        <td>{{ basket.owner.get_full_name|default:"-" }}</td>
         <td>{{ basket.num_lines }}</td>
         <td>{{ basket.num_items }}</td>
         <td>{{ basket.total_incl_tax|currency }}</td>
