Add form id being used in checkout.js

--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -10,7 +10,7 @@ Order preview | {{ block.super }}
 
 {% block place_order %}
 <h3>Please review the information above, then click "Place Order"</h3>
-<form method="post" action="{% url checkout:preview %}">
+<form method="post" action="{% url checkout:preview %}" id="place-order-form">
 	<input type="hidden" name="action" value="place_order" />
 	{% csrf_token %}
     <div class="form-actions">
