--- a/oscar/templates/dashboard/ranges/range_product_list.html
+++ b/oscar/templates/dashboard/ranges/range_product_list.html
@@ -83,7 +83,7 @@ Products in range '{{ range.name }}' | {{ block.super }}
 					<th>Partner</th>
 					<th>Partner SKU</th>
 					<th>Price</th>
-					<th>Product discountable</th>
+					<th>Is product discountable?</th>
 					<th></th>
 				</tr>
 				{% for product in products %}
@@ -96,7 +96,7 @@ Products in range '{{ range.name }}' | {{ block.super }}
 					<td>{{ product.stockrecord.partner.name }}</td>
 					<td>{{ product.stockrecord.partner_sku }}</td>
 					<td>{{ product.stockrecord.price_incl_tax|currency }}</td>
-					<td>{% if product.not_discountable %}No{% else %}Yes{% endif %}</td>
+					<td>{% if product.is_discountable %}Yes{% else %}No{% endif %}</td>
 					<td>
 						<a class="btn btn-danger" href="#" data-behaviours="remove">Remove</a>
 					</td>
