Autocomplete category name - early version

--- a/oscar/templates/dashboard/catalogue/category_create.html
+++ b/oscar/templates/dashboard/catalogue/category_create.html
@@ -2,6 +2,11 @@
 {% load category_tags %}
 {% block body_class %}catalogue{% endblock %}
 
+{% block extrascripts %}
+    {{ block.super }}
+    <script type="text/javascript">$(oscar.dashboard.catalogue.init);</script>
+{% endblock %}
+
 {% block title %}
 Category management | {{ block.super }}
 {% endblock %}
